--- a/week03_back_propagation/Homework.ipynb
+++ b/week03_back_propagation/Homework.ipynb
@@ -64,6 +64,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def g(x):    \n",
+    "    return 1/(1+np.exp(-x))\n",
+    "\n",
+    "def grad_g(g):\n",
+    "        return (1-g)*g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.random.seed(1)\n",
+    "wb = np.random.random((3,2)) - 1  # [3x2] (2 inputs + 1 bias) x 2 nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 0.448902800296\n",
+      "Error: 0.00208700805523\n",
+      "Error: 0.00150727699826\n",
+      "Error: 0.00123506912559\n",
+      "Error: 0.00106948843091\n",
+      "Error: 0.000955420334157\n",
+      "Error: 0.000870800443917\n",
+      "Error: 0.000804854174491\n",
+      "Error: 0.00075161704434\n",
+      "Error: 0.000707486723397\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1000):\n",
+    "    z0=np.dot(x,wb)\n",
+    "    a1=g(z0)\n",
+    "    \n",
+    "    delta_a1=a1-y\n",
+    "    delta_z0=delta_a1*grad_g(delta_a1)\n",
+    "    \n",
+    "    wb += x.T.dot(delta_z0)\n",
+    "    if(i % 100) == 0:   # Only print the error every 10000 steps \n",
+    "        print(\"Error: \" + str(np.mean(np.abs(delta_a1))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -1.99025428,  42.70492028],\n",
+       "       [ -2.30952828,  43.12510146],\n",
+       "       [  0.26931588,  18.82220098]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x_test=[-1, -1, 1]\n",
+    "z0=np.dot(x_test,wb)\n",
+    "a1=g(z0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  9.89739076e-01,   7.92269976e-30])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x_test=[2, 2, 1]\n",
+    "z0=np.dot(x_test,wb)\n",
+    "a1=g(z0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  2.41053823e-04,   1.00000000e+00])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
